@@ -1,2 +1,4 @@
 Makefile
 .deps
+parser.h
+parser.c
